static/css/main.css
/* ... */
/*--------------------------------------------------------------
  Menu (Sidebar)
--------------------------------------------------------------*/
.menu ul {
    padding: 0;
}

.menu li {
    list-style-type: none;
    margin: 10px 0;
    font-size: 18px;
    line-height: 18px;
    display: grid;
    align-items: center;
}

.menu a {
    text-decoration: none;
    color: var(--accent-primary);
}

/*--------------------------------------------------------------
  Timeline
--------------------------------------------------------------*/
.timeline {
    position: relative;
    margin: 20px 0;
    padding-left: 40px;
}

.timeline::before {
    content: "";
    position: absolute;
    left: 20px;
    top: 0;
    bottom: 0;
    width: 2px;
    background: var(--accent-secondary);
    border-radius: 2px;
}

.timeline-item {
    position: relative;
    margin-bottom: 30px;
}

.timeline-item::before {
    content: "";
    position: absolute;
    left: 10px;
    top: 10px;
    width: 15px;
    height: 15px;
    background: var(--accent-secondary);
    border-radius: 50%;
}

.timeline-date {
    color: var(--accent-tertiary);
    font-weight: bold;
    margin-bottom: 5px;
    margin-left: 40px;
}

.timeline-title {
    margin-bottom: 30px;
}

.timeline-title>* {
    display: inline-block;
}

.timeline-title-composed {
    display: flex;
    align-items: center;
}

.timeline-subtitle {
    color: var(--accent-tertiary);
}

.timeline-title-detail {
    font-weight: 600;
    text-transform: uppercase;
    font-size: 12px;
}

.timeline-title-detail::before {
    content: '•';
    margin: 0 10px;
}

.timeline-title h3 {
    display: block;
}

.timeline-content {
    background: var(--bg-tertiary);
    padding: 25px;
    border-radius: 12px;
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
    text-align: justify;
    /* box-shadow: 0 1px 2px #0000000d; */
    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
    border: 1px solid #e2e8f0;
    transition: transform 0.2s ease-in-out,
        border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
}

.timeline-item::before {
    transition: all 0.3s ease-in-out;
    box-shadow: 0 0 5px var(--accent-secondary);
    animation: pulse 2s infinite ease-in-out;
}

@keyframes pulse {
    0% {
        box-shadow: 0 0 5px rgba(123, 97, 255, 0.5);
    }

    50% {
        box-shadow: 0 0 15px rgba(123, 97, 255, 0.7);
    }

    100% {
        box-shadow: 0 0 5px rgba(123, 97, 255, 0.5);
    }
}

/*--------------------------------------------------------------
  Lists
--------------------------------------------------------------*/
.language-list {
    list-style-type: none;
    padding: 0;
    margin: 0;
}

.language-list li {
    display: grid;
    grid-auto-flow: column;
    align-items: center;
    justify-content: left;
    gap: 10px;
}

/*--------------------------------------------------------------
  Table
--------------------------------------------------------------*/
.table-container {
    border: 1px solid var(--neutral-secondary);
    border-radius: 10px;
    /* box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3); */
}

.table {
    width: 100%;
    border-collapse: collapse;
}

.table tr {
    border-bottom: 1px solid var(--neutral-secondary);
}

.table tr:last-child {
    border-bottom: 0;
}

.table tr td {
    background-color: var(--bg-tertiary);
    padding: 15px 20px;
}

.table tr td:has(img) {
    line-height: 0;
}

.table tr:first-child td:first-child {
    border-radius: 10px 0 0 0;
}

.table tr:first-child td:last-child {
    border-radius: 0 10px 0 0;
}

.table tr:last-child td:first-child {
    border-radius: 0 0 0 10px;
}

.table tr:last-child td:last-child {
    border-radius: 0 0 10px 0;
}

.table tr:first-child:last-child td:first-child {
    border-radius: 10px 0 0 10px;
}

.table tr:first-child:last-child td:last-child {
    border-radius: 0 10px 10px 0;
}

/*--------------------------------------------------------------
  Card
--------------------------------------------------------------*/
.card {
    background: var(--bg-tertiary);
    padding: 15px;
    border-radius: 8px;
    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
}

.card .card-img {
    width: 100%;
    min-height: 150px;
    max-height: 150px;
    object-fit: cover;
    vertical-align: top;
    border-radius: 5px 5px 0 0;
}

.card .card-title h1,
.card .card-title h2 {
    margin: 0;
}

.card .card-content {
    padding: 10px;
    position: relative;
    text-align: justify;
    display: grid;
    gap: 15px;
}

.card .card-content-img {
    border-radius: 50%;
    position: absolute;
    top: -75px;
    right: 30px;
    z-index: 1;
    max-width: 150px;
    opacity: 1;
}

.card-footer {
    display: flex;
    gap: 10px;
}

/*--------------------------------------------------------------
  Button
--------------------------------------------------------------*/
.button {
    display: inline-grid;
    grid-auto-flow: column;
    gap: 10px;
    background: var(--accent-tertiary);
    color: white;
    padding: 10px 15px;
    font-weight: bold;
    text-decoration: none;
    border-radius: 6px;
    transition: 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
    align-items: center;
}

.button i {
    font-size: 20px;
    padding: 0;
}

.button:hover {
    background-color: var(--accent-tertiary);
    box-shadow: 0 6px 14px var(--accent-tertiary);
}

/*--------------------------------------------------------------
  Image Flag
--------------------------------------------------------------*/

.img-flag {
    width: 35px;
    aspect-ratio: 1;
}

/*--------------------------------------------------------------
  Component specific
--------------------------------------------------------------*/

span[data-translate-key="course_hours"] {
    margin-left: 5px;
}

/*--------------------------------------------------------------
  Animations
--------------------------------------------------------------*/
.lang-transition {
    animation: langBlur 0.3s ease-in-out;
}
/* ... */

